--- a/HTML/RWD/Template_responsive/Template6.css
+++ b/HTML/RWD/Template_responsive/Template6.css
@@ -360,3 +360,47 @@ img {
     width: 100%;
   }
 }
+@media only screen and (min-width: 769px) and (max-width: 1024px) {
+  #header {
+    width: 100%;
+  }
+  #header #hgroup {
+    padding-left: 90px;
+  }
+
+  #header nav {
+    width: 90%;
+    margin: 0 auto;
+    text-align: center;
+    margin: 30px;
+  }
+  #container {
+    width: 100%;
+  }
+  #container #slider {
+    width: 100%;
+  }
+  /* #container #slider figure img {
+    width: 49%;
+    height: 260px;
+  }
+  #container #slider figure figcaption {
+    width: 50%;
+  } */
+  /* #container #homepage #services .one_third {
+    width: 45%;
+  }
+  #container #homepage #latest .one_quarter {
+    width: 47%;
+  }
+  #container #homepage #latest .one_quarter figure img {
+    width: 100%;
+    height: 180px;
+  }
+  #container #homepage #latest .one_quarter figure figcaption {
+    width: 100%;
+  } */
+  #footer {
+    width: 100%;
+  }
+}
