--- a/HTML/templates-responsive/template4/style.css
+++ b/HTML/templates-responsive/template4/style.css
@@ -255,7 +255,7 @@ a{
     }
     #header {
       width: 100%;
-      background-color: #ff00d4;
+      background-color: #ff0040;
     }
      #header nav {
       width: 100%;
