--- a/HTML/templates-responsive/template4/style.css
+++ b/HTML/templates-responsive/template4/style.css
@@ -300,6 +300,9 @@ a{
     #header nav li{
         margin-right: 0px;
       }
+      div.wrapper{
+          width:100%;
+      }
   }
   @media only screen and (min-width: 421px) and (max-width: 768px){
   * {
@@ -353,6 +356,9 @@ a{
   }
   #header nav li{
     margin-right: 0px;
+  }
+  div.wrapper{
+      width:100%;
   }
 }
 
