--- a/HTML/Templates/Templateresponsives/Template1.html
+++ b/HTML/Templates/Templateresponsives/Template1.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Templayte2_Basic87</title>
+    <title>Template2_Basic87</title>
     <link rel="stylesheet" href="./Template1.css" type="text/css">
 </head>
 
