--- a/NOV2 2021/Templates/basic-83/index.html
+++ b/NOV2 2021/Templates/basic-83/index.html
@@ -1,67 +1,244 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
 <head>
-<title>Basic 83</title>
-<meta charset="UTF-8">
-<link rel="stylesheet" href="styles/layout.css" type="text/css">
-<!--[if lt IE 9]><script src="scripts/html5shiv.js"></script><![endif]-->
+  <title>Basic 83</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles/layout.css" type="text/css">
+  <!--[if lt IE 9]><script src="scripts/html5shiv.js"></script><![endif]-->
+  <style>
+    @media only screen and (max-width: 768px) {
+      .row1 {
+        display: flex;
+      }
+
+      #header {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+        align-items: center;
+      }
+      #header nav ul li
+
+      #header nav ul {
+        padding: 0px;
+        margin: 0px;
+      }
+
+      #header nav ul li {
+        display: flex;
+        justify-content: center;
+        margin: 0px;
+        padding: 0px;
+        border: 1px solid red;
+        padding: 2px;
+      }
+
+
+      #container #slider img {
+        width: 100%;
+      }
+
+      #container #services {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        border: 1px solid black;
+      }
+
+      #services .one_quarter {
+        padding: 0px;
+        display: flex;
+        flex-direction: column;
+        border: 1px solid red;
+        align-items: center;
+        margin: 0px;
+      }
+
+      #container .last {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+       
+      }
+
+      .three_quarter {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        border: 1px solid green;
+        margin: 0px;
+      }
+      .lastbox{
+        display: flex;
+        flex-direction: column;
+        border: 1px solid blueviolet;
+        align-items: center;
+        margin: 0px;
+      }
+      #footer{
+        display: flex;
+      }
+    }
+
+    @media only screen and (max-width: 1023px) {
+      #header {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+      }
+
+      #header nav ul {
+        padding: 0px;
+        margin: 0px;
+      }
+
+      #header nav ul li {
+        display: flex;
+        justify-content: center;
+        margin: 0px;
+        padding: 2px;
+        border: 1px solid hotpink;
+      }
+
+      #container #slider img {
+        width: 100%;
+      }
+
+      #container #services {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        border: 1px solid black;
+      }
+
+      #services .one_quarter {
+        padding: 0px;
+        display: flex;
+        flex-direction: column;
+        border: 1px solid red;
+        align-items: center;
+        margin: 0px;
+      }
+      .three_quarter {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        border: 1px solid green;
+        margin: 0px;
+      }
+
+    }
+
+    @media only screen and (min-width: 1024px) {
+
+      #header,
+      #container,
+      #footer {
+        display: block;
+        width: 960px;
+        margin: 0 auto;
+      }
+
+      #header nav ul li {
+        border: none;
+        display: inline;
+        margin-right: 25px;
+        text-transform: uppercase;
+      }
+
+      #container #slider img {
+        width: 960px;
+        height: 280px;
+      }
+
+      #container section {
+        display: block;
+        width: 100%;
+        margin: 0 0 30px 0;
+        padding: 0;
+      }
+
+      .one_quarter {
+        width: 225px;
+      }
+
+      .one_quarter,
+      .two_quarter,
+      .three_quarter,
+      .four_quarter {
+        display: block;
+        float: left;
+        margin: 0 10px 0 0;
+      }
+
+      .three_quarter {
+        width: 715px;
+      }
+    }
+  </style>
 </head>
+
 <body>
-<div class="wrapper row1">
-  <header id="header" class="clear">
-    <div id="hgroup">
-      <h1><a href="#">Basic 83</a></h1>
-      <h2>Free HTML5 Website Template</h2>
-    </div>
-    <form action="#" method="post">
-      <fieldset>
-        <legend>Search:</legend>
-        <input type="text" value="Search Our Website&hellip;" onFocus="this.value=(this.value=='Search Our Website&hellip;')? '' : this.value ;">
-        <input type="submit" id="sf_submit" value="submit">
-      </fieldset>
-    </form>
-    <nav>
-      <ul>
-        <li><a href="#">Text Link</a></li>
-        <li><a href="#">Text Link</a></li>
-        <li><a href="#">Text Link</a></li>
-        <li><a href="#">Text Link</a></li>
-        <li class="last"><a href="#">Text Link</a></li>
-      </ul>
-    </nav>
-  </header>
-</div>
-<!-- content -->
-<div class="wrapper row2">
-  <div id="container" class="clear">
-    <!-- content body -->
-    <section id="slider"><a href="#"><img src="images/demo/960x280.gif" alt=""></a></section>
-    <!-- main content -->
-    <div id="homepage">
-      <!-- services area -->
+  <div class="wrapper row1">
+    <header id="header" class="clear">
+      <div id="hgroup">
+        <h1><a href="#">Basic 83</a></h1>
+        <h2>Free HTML5 Website Template</h2>
+      </div>
+      <form action="#" method="post">
+        <fieldset>
+          <legend>Search:</legend>
+          <input type="text" value="Search Our Website&hellip;"
+            onFocus="this.value=(this.value=='Search Our Website&hellip;')? '' : this.value ;">
+          <input type="submit" id="sf_submit" value="submit">
+        </fieldset>
+      </form>
+      <nav>
+        <ul>
+          <li><a href="#">Text Link</a></li>
+          <li><a href="#">Text Link</a></li>
+          <li><a href="#">Text Link</a></li>
+          <li><a href="#">Text Link</a></li>
+          <li class="last"><a href="#">Text Link</a></li>
+        </ul>
+      </nav>
+    </header>
+  </div>
+  <!-- content -->
+  <div class="wrapper row2">
+    <div id="container" class="clear">
+      <!-- content body -->
+      <section id="slider"><a href="#"><img src="images/demo/img1.jpg" alt=""></a></section>
+
       <section id="services" class="clear">
         <article class="one_quarter">
           <figure><img src="images/demo/32x32.gif" width="32" height="32" alt=""></figure>
           <strong>Lorum ipsum dolor</strong>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi ullamcorper.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi
+            ullamcorper.</p>
           <p class="more"><a href="#">Read More &raquo;</a></p>
         </article>
         <article class="one_quarter">
           <figure><img src="images/demo/32x32.gif" width="32" height="32" alt=""></figure>
           <strong>Lorum ipsum dolor</strong>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi ullamcorper.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi
+            ullamcorper.</p>
           <p class="more"><a href="#">Read More &raquo;</a></p>
         </article>
         <article class="one_quarter">
           <figure><img src="images/demo/32x32.gif" width="32" height="32" alt=""></figure>
           <strong>Lorum ipsum dolor</strong>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi ullamcorper.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi
+            ullamcorper.</p>
           <p class="more"><a href="#">Read More &raquo;</a></p>
         </article>
         <article class="one_quarter lastbox">
           <figure><img src="images/demo/32x32.gif" width="32" height="32" alt=""></figure>
           <strong>Lorum ipsum dolor</strong>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi ullamcorper.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi
+            ullamcorper.</p>
           <p class="more"><a href="#">Read More &raquo;</a></p>
         </article>
       </section>
@@ -73,13 +250,18 @@
       <section class="last clear">
         <article class="three_quarter">
           <h2>Lorum ipsum dolor</h2>
-          <p>This is a W3C compliant free website template from <a href="https://www.os-templates.com/" title="Free Website Templates">OS Templates</a>. For full terms of use of this template please read our <a href="https://www.os-templates.com/template-terms">website template licence</a>.</p>
-          <p>You can use and modify the template for both personal and commercial use. You must keep all copyright information and credit links in the template and associated files. For more HTML5 templates visit <a href="https://www.os-templates.com/">free website templates</a>.</p>
+          <p>This is a W3C compliant free website template from <a href="https://www.os-templates.com/"
+              title="Free Website Templates">OS Templates</a>. For full terms of use of this template please read our <a
+              href="https://www.os-templates.com/template-terms">website template licence</a>.</p>
+          <p>You can use and modify the template for both personal and commercial use. You must keep all copyright
+            information and credit links in the template and associated files. For more HTML5 templates visit <a
+              href="https://www.os-templates.com/">free website templates</a>.</p>
           <footer class="more"><a href="#">Read More &raquo;</a></footer>
         </article>
         <article class="one_quarter lastbox">
           <h2>Lorum ipsum dolor</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi ullamcorper pellentesque. Quisque non luctus sem.</p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc non diam erat. In fringilla massa ut nisi
+            ullamcorper pellentesque. Quisque non luctus sem.</p>
           <footer class="more"><a href="#">Read More &raquo;</a></footer>
         </article>
       </section>
@@ -87,13 +269,14 @@
     </div>
     <!-- / content body -->
   </div>
-</div>
-<!-- Footer -->
-<div class="wrapper row3">
-  <footer id="footer" class="clear">
-    <p class="fl_left">Copyright &copy; 2018 - All Rights Reserved - <a href="#">Domain Name</a></p>
-    <p class="fl_right">Template by <a target="_blank" href="https://www.os-templates.com/" title="Free Website Templates">OS Templates</a></p>
-  </footer>
-</div>
+  </div>
+   <!-- Footer -->
+   <div class="wrapper row3">
+    <footer id="footer" class="clear">
+      <p class="fl_left">Copyright &copy; 2018 - All Rights Reserved - <a href="#">Domain Name</a></p>
+      <p class="fl_right">Template by <a target="_blank" href="https://www.os-templates.com/" title="Free Website Templates">OS Templates</a></p>
+    </footer>
+  </div>
 </body>
+
 </html>
