--- a/NOV2 2021/Templates/TMPLT1FLEXBOX/index.html
+++ b/NOV2 2021/Templates/TMPLT1FLEXBOX/index.html
@@ -101,6 +101,11 @@
         padding: 2px;
         border: 1px solid hotpink;
       }
+      #header form{
+        display: flex;
+        flex-direction: column;
+        margin: 0px;
+      }
 
       #container #slider img {
         width: 100%;
