--- a/Assignments/Assignment Flex RWD/Flex RWD Basic 84/styles.css
+++ b/Assignments/Assignment Flex RWD/Flex RWD Basic 84/styles.css
@@ -34,28 +34,28 @@ header{
     padding:20px 0;
 }
 /* ============================Title========================== */
-.row1 header #title{
+header #title{
     float:left;
     margin-bottom:20px;
 }
-.row1 header #title h1{
+header #title h1{
     font-size:36px;
     font-weight:normal;
 }
-.row1 header #title h2{
+header #title h2{
     font-size:13px;
     font-weight:normal;
 }
 /* ============================Form========================== */
-.row1 header form{
+header form{
     float:right;
     width: 290px;
     margin:20px 0;
 }
-.row1 header form fieldset{
+header form fieldset{
    border:none;
 }
-.row1 header form #searchbox{
+header form #searchbox{
     float:left;
     width: 200px;
     padding:5px;
@@ -65,11 +65,11 @@ header{
     font-size: 12px;
     color: white;
 }
-.row1 header form #searchbox textarea select{
+header form #searchbox textarea select{
     font-size: 12px;
     color: white;
 }
-.row1 header form #submit{
+header form #submit{
     float:right;
     width: 70px;
     font-size: 12px;
@@ -249,3 +249,129 @@ nav ul .last{
     float:right;
     padding:20px 0;
 }
+
+
+
+/* ============================================ Media queries ============================================  */
+
+/* ============================================ mobile ============================================  */
+/* @media only screen and (max-width: 600px) {
+    * {
+      box-sizing: border-box;
+      padding: 0;
+      margin-right: 0;
+    }
+    header {
+      flex-direction: column;
+      width: 100%;
+      text-align: center;
+    }
+    header nav {
+      padding: 0;
+    }
+    header nav ul {
+      display: block;
+      padding: 0;
+    }
+    header nav ul li {
+      border: 3px solid white;
+      margin: 10px;
+      padding: 10px;
+    }
+    header nav ul li {
+      font-weight: bold;
+    }
+    header #title {
+      margin-bottom: 10px;
+    }
+    header form {
+        width:100%;
+      margin: 0;
+      margin-bottom: 10px;
+    }
+  
+    .container {
+      width: 100%;
+      padding: 0 10px;
+    }
+    .section2 {
+      flex-direction: column;
+    }
+    .section2 article {
+      width: 100%;
+      margin: 0;
+    }
+    .section3 {
+      flex-direction: column;
+    }
+    .section3 article {
+      width: 100%;
+    }
+    .section3 aside {
+      width: 100%;
+    }
+    footer {
+      width: 100%;
+      flex-direction: column;
+    }
+  } */
+  /* ============================================ Tablet ============================================  */
+  /* @media only screen and (min-width:601px) and (max-width:768px){
+      * {
+          box-sizing: border-box;
+          padding: 0;
+          margin-right: 0;
+        }
+        header {
+          flex-direction: column;
+          width: 100%;
+          text-align: center;
+        }
+        header nav {
+          padding: 0;
+        }
+        header nav ul {
+          padding: 0;
+        }
+        header nav ul li {
+          margin: 10px;
+          padding: 10px;
+        }
+        header nav ul li {
+          font-weight: bold;
+        }
+        header #title {
+          margin-bottom: 10px;
+        }
+        header form {
+          width:100%;
+          margin: 0;
+          margin-bottom: 10px;
+        }
+        .container {
+          width: 100%;
+          padding: 20px 30px;
+        }
+        .section2 {
+        }
+        .section2 article {
+          width: 50%;
+          margin: 0;
+          padding:10px;
+        }
+        .section3 {
+          flex-direction: column;
+        }
+        .section3 article {
+          width: 100%;
+        }
+        .section3 aside {
+          width: 100%;
+        }
+        footer {
+          width: 100%;
+          padding:0 30px;
+        }
+      }
+  } */
+  
