--- a/Assignments/Assignment Flex RWD/Flex RWD Basic 84/styles.css
+++ b/Assignments/Assignment Flex RWD/Flex RWD Basic 84/styles.css
@@ -6,317 +6,324 @@
 /* border: 1px solid #666666; */
 
 /* ============================Common Elements========================== */
-*{
-    margin:0;
-    padding:0;
+* {
+  margin: 0;
+  padding: 0;
 }
-body{
-    font-family: Georgia, "Times New Roman", Times, serif;
-    font-size: 13px;
-    color:#C0BAB6;
+body {
+  font-family: Georgia, "Times New Roman", Times, serif;
+  font-size: 13px;
+  color: #c0bab6;
 }
-a{
-    text-decoration:none;
-    color:#C0BAB6;
+a {
+  text-decoration: none;
+  color: #c0bab6;
 }
 
-.row1{
-    background-color: #0007fe;
+.row1 {
+  background-color: #0007fe;
 }
-.wrapper{
-    width:100%;
+.wrapper {
+  width: 100%;
 }
 /* ============================================ Header  ============================================  */
-header{
-    width:960px;
-    margin:0 auto;
-    background-color:#0007fe;
-    padding:20px 0;
+header {
+  width: 960px;
+  margin: 0 auto;
+  padding: 20px 0;
+  background-color: #0007fe;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
 }
 /* ============================Title========================== */
-header #title{
-    float:left;
-    margin-bottom:20px;
+header #title {
+  /* float:left; */
+  margin-bottom: 20px;
 }
-header #title h1{
-    font-size:36px;
-    font-weight:normal;
+header #title h1 {
+  font-size: 36px;
+  font-weight: normal;
 }
-header #title h2{
-    font-size:13px;
-    font-weight:normal;
+header #title h2 {
+  font-size: 13px;
+  font-weight: normal;
 }
 /* ============================Form========================== */
-header form{
-    float:right;
-    width: 290px;
-    margin:20px 0;
+header form {
+  /* float:right; */
+  width: 290px;
+  margin: 20px 0;
 }
-header form fieldset{
-   border:none;
+header form fieldset {
+  border: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
 }
-header form #searchbox{
-    float:left;
-    width: 200px;
-    padding:5px;
-    border: 1px solid #666666;
-    font-size: 12px;
-    background-color: #11bdff;
-    font-size: 12px;
-    color: white;
+header form #searchbox {
+  /* float:left; */
+  width: 200px;
+  padding: 5px;
+  border: 1px solid #666666;
+  font-size: 12px;
+  background-color: #11bdff;
+  font-size: 12px;
+  color: white;
 }
-header form #searchbox textarea select{
-    font-size: 12px;
-    color: white;
+header form #searchbox textarea select {
+  font-size: 12px;
+  color: white;
 }
-header form #submit{
-    float:right;
-    width: 70px;
-    font-size: 12px;
-    font-weight:bold;
-    background-color: #FF9900;
-    color: #FFFFFF;
-    border:none;
-    cursor:pointer;
-    padding:5px;
-    
+header form #submit {
+  /* float:right; */
+  width: 70px;
+  font-size: 12px;
+  font-weight: bold;
+  background-color: #ff9900;
+  color: #ffffff;
+  border: none;
+  cursor: pointer;
+  padding: 5px;
 }
 /* ============================Nav========================== */
-nav{
-    clear:both;
-    background-color: #11bdff; 
-    overflow:auto;
-    width:100%;
-    padding:20px 0;
+nav {
+  background-color: #11bdff;
+  width: 100%;
+  padding: 20px 0;
 }
 nav ul {
-    list-style:none;
-    padding:0 20px;
-    overflow:auto;
+  list-style: none;
+  display: flex;
+  justify-content: space-evenly;
+  padding: 0 30px;
 }
-nav ul li{
-    float:left;
-    margin-right:25px;
-    text-transform: uppercase;
-    width:auto;
-    height:auto;
+nav ul li {
+  margin-right: 25px;
+  text-transform: uppercase;
 }
-nav ul li a{
-    color: #0027ba;
-}
-nav ul .last{
-    margin-right:0;
+nav ul li a {
+  color: #0027ba;
 }
 /* ================================================================================================================= */
 
 /* ============================================ Section ============================================  */
 
-#container{
-    width:960px;
-    margin:0 auto;
-    overflow:hidden;
-    padding:30px 0;
+.container {
+  width: 960px;
+  margin: 0 auto;
+  overflow: hidden;
+  padding: 30px 0;
 }
 /* ============================ Section 1 ========================== */
-#container #section1{
-    margin-bottom:30px;
+.section1 {
+  margin-bottom: 30px;
 }
-#container #section1 img{
-    width:960px;
-    height:360px;
+.section1 img {
+  width: 100%;
+  height: 360px;
 }
 /* ============================ Section 2 ========================== */
-#container #section2{
-    padding:15px;
-    width:930px;
-    background-color: #cdedfa;
-    margin-bottom:30px;
+.section2 {
+  padding: 15px;
+  width: 930px;
+  background-color: #cdedfa;
+  margin-bottom: 30px;
 }
-#container #section2 p{
-    color: #439cbe;
-    font-size:16px;
-    line-height: 1.8em;
-    text-transform:uppercase;
-    text-align:justify;
-
+.section2 p {
+  color: #439cbe;
+  font-size: 16px;
+  line-height: 1.8em;
+  text-transform: uppercase;
+  text-align: justify;
 }
 /* ================================================================= */
 
 /* ============================================ Homepage ============================================  */
-#homepage{
-    width:100%;
-    line-height:1.6em;
+#homepage {
+  width: 100%;
+  line-height: 1.6em;
 }
 /* ============================ Section 3 ========================== */
-#homepage h1{
-    color: #fc813b;
-    font-size:16px;
-    font-weight:bold;
-    margin-bottom:25px;
-    padding-bottom:10px;
-    border-bottom: 1px solid #D6D6D6;
-    text-transform: uppercase;
+.homepage h1 {
+  color: #fc813b;
+  font-size: 16px;
+  font-weight: bold;
+  margin-bottom: 25px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #d6d6d6;
+  text-transform: uppercase;
 }
-#homepage #section3{
-    margin-bottom:30px;
-    overflow:auto;
+.section3 {
+  margin-bottom: 30px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
-#homepage #section3 .article{
-    float:left;
-    display:inline;
-    width:300px;
-    margin-right:30px;
+.section3 .article {
+  width: 300px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
-#homepage #section3 #article3{
-    margin-right:0;
+.section3 .article img {
+  height: 32px;
+  width: 32px;
+  flex-grow: 1;
 }
-#homepage #section3 .article img{
-    float:left;
-    height:32px;
-    width:32px;
+.section3 .article strong {
+  margin: 8px 0 0 10px;
+  font-size: 14px;
+  font-weight: bold;
+  color: #3986a3;
+  flex-grow: 2;
 }
-#homepage #section3 .article strong{
-    float:left;
-    margin:8px 0 0 10px;
-    font-size:14px;
-    font-weight:bold;
-    color: #3986a3;
+.section3 .article p {
+  width:100%;
+  color: #439cbe;
+  padding-top: 5px;
 }
-#homepage #section3 .article p{
-    clear:both;
-    color: #439cbe;
-    padding-top:5px;
+.readmore {
+  clear: both;
+  color: #919191;
+  padding-top: 5px;
+  text-align: right;
+  width: 100%;
 }
-#homepage #section3 .article .readmore{
-    clear:both;
-    color: #919191;
-    padding-top:5px;
-    text-align:right;
-}
-#homepage #section3 .article .readmore a{
-    color:#FF9900;
+.readmore a {
+  color: #ff9900;
 }
 
 /* ============================ Section 4 ========================== */
-#section4{
-    margin-bottom:30px;
-    overflow:auto;
+.section4 {
+  margin-bottom: 30px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
-#section4 article{
-    float:left;
-    margin-right:20px;
-    width:225;
-
+.section4 article {
+  width: 225;
 }
-#section4 article figure{
-    padding:4px 2px;
-    border: 1px solid #D6D6D6;
+.section4 article figure {
+  padding: 4px 2px;
+  border: 1px solid #d6d6d6;
 }
-#section4 article figure img{
-    width:215px;
-    height:315px;
+.section4 article figure img {
+  width: 215px;
+  height: 315px;
 }
-#section4 article figcaption{
-    padding:5px;
-    text-align:center;
-    color:#fc813b;
-    background-color: #EEEEEE;
-    text-transform:uppercase;
-}
-#section4 #article4{
-    margin-right:0;
+.section4 article figcaption {
+  padding: 5px;
+  text-align: center;
+  color: #fc813b;
+  background-color: #eeeeee;
+  text-transform: uppercase;
 }
 /* ================================================================= */
 
 /* ============================================ Footer ============================================  */
-.row3{
-    background-color: #11bdff;
-    color:#0027ba;
+.row3 {
+  background-color: #11bdff;
+  color: #0027ba;
 }
-#main_footer{
-    width:960px;
-    margin:0 auto;
-    overflow:auto;
+footer {
+  width: 960px;
+  display: flex;
+  /* flex:wrap; */
+  justify-content: space-between;
+  margin: 0 auto;
+  overflow: auto;
 }
-#main_footer p{
-    font-size:13px;
+footer p {
+  font-size: 13px;
 }
-#main_footer #left_footer{
-    float:left;
-    padding:20px 0;
+footer #left_footer {
+  padding: 20px 0;
 }
-#main_footer #right_footer{
-    float:right;
-    padding:20px 0;
+footer #right_footer {
+  padding: 20px 0;
 }
-
-
 
 /* ============================================ Media queries ============================================  */
 
 /* ============================================ mobile ============================================  */
-/* @media only screen and (max-width: 600px) {
-    * {
-      box-sizing: border-box;
-      padding: 0;
-      margin-right: 0;
-    }
-    header {
-      flex-direction: column;
-      width: 100%;
-      text-align: center;
-    }
-    header nav {
-      padding: 0;
-    }
-    header nav ul {
-      display: block;
-      padding: 0;
-    }
-    header nav ul li {
-      border: 3px solid white;
-      margin: 10px;
-      padding: 10px;
-    }
-    header nav ul li {
-      font-weight: bold;
-    }
-    header #title {
-      margin-bottom: 10px;
-    }
-    header form {
-        width:100%;
-      margin: 0;
-      margin-bottom: 10px;
-    }
-  
-    .container {
-      width: 100%;
-      padding: 0 10px;
-    }
-    .section2 {
-      flex-direction: column;
-    }
-    .section2 article {
-      width: 100%;
-      margin: 0;
-    }
-    .section3 {
-      flex-direction: column;
-    }
-    .section3 article {
-      width: 100%;
-    }
-    .section3 aside {
-      width: 100%;
-    }
-    footer {
-      width: 100%;
-      flex-direction: column;
-    }
-  } */
-  /* ============================================ Tablet ============================================  */
-  /* @media only screen and (min-width:601px) and (max-width:768px){
+@media only screen and (max-width: 600px) {
+  * {
+    box-sizing: border-box;
+    padding: 0;
+    margin-right: 0;
+  }
+  header {
+    flex-direction: column;
+    width: 100%;
+    text-align: center;
+  }
+  header nav {
+    padding: 0;
+  }
+  header nav ul {
+    display: block;
+    padding: 0;
+  }
+  header nav ul li {
+    border: 3px solid white;
+    margin: 10px;
+    padding: 10px;
+  }
+  header nav ul li {
+    font-weight: bold;
+  }
+  header #title {
+    margin-bottom: 10px;
+  }
+  header form {
+    width: 100%;
+    margin: 0;
+    margin-bottom: 10px;
+  }
+  header form fieldset {
+    display: block;
+  }
+
+  .container {
+    width: 100%;
+    padding: 30px 10px;
+  }
+  .section1 img {
+    height: auto;
+  }
+  .section2 {
+    width: 100%;
+  }
+  .section2 p {
+    font-size: 0.8em;
+  }
+  .section3 {
+    flex-direction: column;
+  }
+  .section3 article {
+    width: 100%;
+  }
+  .section4{
+    margin:0;
+  }
+  .section4 article{
+    width:100%;
+    display:flex;
+    flex-wrap:wrap;
+    justify-content: center;
+
+  }
+  footer {
+    padding:0 10px;
+    width: 100%;
+    flex-direction: column;
+  }
+}
+/* ============================================ Tablet ============================================  */
+@media only screen and (min-width:601px) and (max-width:768px){
       * {
           box-sizing: border-box;
           padding: 0;
@@ -348,30 +355,40 @@ nav ul .last{
           margin: 0;
           margin-bottom: 10px;
         }
+        header form fieldset {
+          display: block;
+        }
         .container {
           width: 100%;
-          padding: 20px 30px;
+          padding: 30px 30px;
+        }
+        .section1 img {
+          height: auto;
         }
         .section2 {
+          width: 100%;
         }
-        .section2 article {
-          width: 50%;
-          margin: 0;
-          padding:10px;
+        .section2 p {
+          font-size: 1em;
         }
         .section3 {
           flex-direction: column;
         }
-        .section3 article {
+        .section3 .article {
           width: 100%;
         }
-        .section3 aside {
-          width: 100%;
+        .section4{
+          margin:0;
+        }
+        .section4 article{
+          width:50%;
+          display:flex;
+          flex-wrap:wrap;
+          justify-content: center;
         }
         footer {
           width: 100%;
           padding:0 30px;
         }
       }
-  } */
-  
+  }
