--- a/templates_FlexBox/T83_spaceX_style.css
+++ b/templates_FlexBox/T83_spaceX_style.css
@@ -52,7 +52,8 @@
 
         .fl_right {
             display: flex;
-            justify-content: flex-end;        }
+            justify-content: flex-end;        
+        }
 
         img {
             margin: 0;
