--- a/NOV2 2021/Templates/basic-84/styles/layout.css
+++ b/NOV2 2021/Templates/basic-84/styles/layout.css
@@ -1,5 +1,5 @@
 /*
-HTML 5 Template Name: Basic 85
+HTML 5 Template Name: Basic 84
 File: Layout CSS
 Author: OS Templates
 Author URI: https://www.os-templates.com/
@@ -32,8 +32,8 @@ img{margin:0; padding:0; border:none; line-height:normal; vertical-align:middle;
 address, article, aside, figcaption, figure, footer, header, nav, section{display:block; margin:0; padding:0;}
 
 q{display:block; padding:0 10px 8px 10px; color:#979797; background-color:#ECECEC; font-style:italic; line-height:normal;}
-q:before{content:'“ '; font-size:26px;}
-q:after{content:' „'; font-size:26px; line-height:0;}
+q:before{content:'ï¿½ '; font-size:26px;}
+q:after{content:' ï¿½'; font-size:26px; line-height:0;}
 
 /* ----------------------------------------------Wrapper-------------------------------------*/
 
@@ -55,18 +55,24 @@ h1, h2, h3, h4, h5, h6{margin:0; padding:0; font-size:16px; font-weight:bold; fo
 address{font-style:normal;}
 
 blockquote, q{display:block; padding:8px 10px; color:#979797; background-color:#ECECEC; font-style:italic; line-height:normal;}
-blockquote:before, q:before{content:'“ '; font-size:26px;}
-blockquote:after, q:after{content:' „'; font-size:26px; line-height:0;}
+blockquote:before, q:before{content:'ï¿½ '; font-size:26px;}
+blockquote:after, q:after{content:' ï¿½'; font-size:26px; line-height:0;}
 
 form, fieldset, legend{margin:0; padding:0; border:none;}
 legend{display:none;}
 input, textarea, select{font-size:12px; font-family:Georgia,"Times New Roman",Times,serif;}
 
-.one_quarter, .two_quarter, .three_quarter, .four_quarter{display:block; float:left; margin:0 20px 0 0;}
+.one_third, .two_third, .three_third{display:block; float:left; margin:0 30px 0 0;}
+.one_third{width:300px;}
+.two_third{width:630px;}
+.three_third{width:960px; float:none; margin-right:0; clear:both;}
+
+.one_quarter, .two_quarter, .three_quarter, .four_quarter{display:block; float:left; margin:0 20px 0 0; text-align:justify;}
 .one_quarter{width:225px;}
 .two_quarter{width:470px;}
 .three_quarter{width:715px;}
 .four_quarter{width:960px; float:none; margin-right:0; clear:both;}
+
 .lastbox{margin-right:0;}
 
 /*----------------------------------------------Header-------------------------------------*/
@@ -78,9 +84,12 @@ input, textarea, select{font-size:12px; font-family:Georgia,"Times New Roman",Ti
 #header #hgroup h1{font-size:36px;}
 #header #hgroup h2{font-size:13px;}
 
-#header nav{display:block; float:right; margin:10px 0 0 0; padding:20px 0; color:#C0BAB6; background-color:#232323;}
+#header form{display:block; width:290px; float:right; margin:20px 0; padding:0;}
+#header form input{display:block; float:left; width:200px; margin:0; padding:5px; color:#C0BAB6; background-color:#232323; border:1px solid #666666;}
+#header form #sf_submit{display:block; float:right; width:70px; font-size:12px; font-weight:bold; text-transform:uppercase; color:#FFFFFF; background-color:#FF9900; border:none; cursor:pointer;}
+
+#header nav{display:block; width:100%; margin:0; padding:20px 0; color:#C0BAB6; background-color:#232323; clear:both;}
 #header nav ul{padding:0 20px;}
-#header nav li{display:inline; margin-right:25px; text-transform:uppercase;}
 #header nav li.last{margin-right:0;}
 #header nav li a{color:#C0BAB6; background-color:#232323;}
 #header nav li a:hover{color:#FF9900; background-color:#232323;}
@@ -92,29 +101,32 @@ input, textarea, select{font-size:12px; font-family:Georgia,"Times New Roman",Ti
 #container .last{margin:0;}
 #container .more{text-align:right;}
 
+/* ------Slider-----*/
+
+#container #slider{}
+
 /* ------Shout-----*/
 
-#container #shout{padding:0 0 20px 0; border-bottom:1px solid #DEDEDE; text-align:center;}
-#container #shout p{font-size:20px; margin:0; padding:0; line-height:1.8em;}
+#container #shout{display:block; width:930px; padding:15px; font-size:16px; line-height:1.8em; color:#979797; background-color:#EEEEEE; text-transform:uppercase; text-align:justify;}
+#container #shout p{margin:0; padding:0;}
 
 /* ------Main Content-----*/
 
 #container #homepage{display:block; width:100%; line-height:1.6em;}
-#container #homepage .spacer{display:block; width:100%; height:30px; margin:0; padding:0; clear:both;}
-
-#container #homepage #latest{margin-bottom:50px;}
-#container #homepage #latest article{}
-#container #homepage #latest article figure{}
-#container #homepage #latest article figure ul{margin:0; padding:0; list-style:none;}
-#container #homepage #latest article figure ul li{margin-bottom:20px;}
-#container #homepage #latest article figure ul li img{padding:4px; border:1px solid #D6D6D6; text-align:center;}
-#container #homepage #latest article figure figcaption{display:block; width:100%; clear:both; padding:0 0 20px 0; border-bottom:1px solid #DEDEDE; font-weight:bold; text-transform:uppercase; text-align:right;}
+#container #homepage h1{margin-bottom:25px; padding-bottom:10px; border-bottom:1px solid #D6D6D6;}
 
 #container #homepage #services{}
-#container #homepage #services article{}
+
+#container #homepage #services .last{margin-right:0;}
 #container #homepage #services figure{display:inline; float:left;}
 #container #homepage #services strong{float:left; margin:8px 0 0 10px; padding:0; font-size:14px; font-weight:bold; text-transform:uppercase;}
 #container #homepage #services p{display:block; margin:0; padding:5px 0 0 0; clear:both; line-height:1.6em;}
+#container #homepage #services .spacer{clear:both; padding:8px 0; line-height:normal;}
+
+#container #homepage #latest{}
+#container #homepage #latest article{}
+#container #homepage #latest figure{padding:4px; border:1px solid #D6D6D6; text-align:center;}
+#container #homepage #latest figcaption{padding:5px; text-align:center; color:#979797; background-color:#EEEEEE; text-transform:uppercase; text-align:center;}
 
 /*----------------------------------------------Footer-------------------------------------*/
 
